[package]
name = "superdev-prereq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
base64 = "0.22"
rand = "0.8"
borsh = "1.5.7"
